Changed Java version to version 8 for compatibility